Changed file paths

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nova+Mono&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/css/style.css">
-    <link rel="icon" href="/img/favicon.ico" type="image/gif" sizes="16x16">
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="icon" href="./img/favicon.ico" type="image/gif" sizes="16x16">
     <title>Text Animation</title>
 </head>
 
@@ -22,7 +22,7 @@
         <p><a href="https://github.com/adarshpand3y/Decoding-Text-Animation" target="_blank">Github Repository</a> | <a href="https://github.com/adarshpand3y" target="_blank">Github Profile</a></p>
     </footer>
 
-    <script src="/js/script.js"></script>
+    <script src="./js/script.js"></script>
 </body>
 
 </html>
