--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Nova+Mono&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="icon" href="./img/favicon.ico" type="image/gif" sizes="16x16">
-    <title>Text Animation</title>
+    <title>Decoding Text Animation</title>
 </head>
 
 <body>
