improved random string generation and display logic, created createurl.html

--- a/createurl.html
+++ b/createurl.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -10,25 +11,27 @@
     <link rel="stylesheet" href="./css/style.css" />
     <link rel="icon" href="./img/favicon.ico" type="image/gif" sizes="16x16" />
     <title>Decoding Text Animation</title>
-  </head>
+</head>
 
-  <body>
+<body>
     <div class="topnav">
-      <a class="active" href="/index.html">Message</a>
-      <a href="/createurl.html">Create Message</a>
+        <a class="active" href="#home">Home</a>
+        <a href="#news">News</a>
     </div>
     <h1 id="reveal" class="center"></h1>
 
     <footer class="footer">
-      <p>Decoding Text Animation</p>
-      <p>&copy; Created by Adarsh Pandey</p>
-      <p>
-        <a href="https://github.com/adarshpand3y/Decoding-Text-Animation" target="_blank" >Github Repository</a>
-        |
-        <a href="https://github.com/adarshpand3y" target="_blank" >Github Profile</a>
-      </p>
+        <p>Decoding Text Animation</p>
+        <p>&copy; Created by Adarsh Pandey</p>
+        <p>
+            <a href="https://github.com/adarshpand3y/Decoding-Text-Animation" target="_blank">Github Repository</a>
+            |
+            <a href="https://github.com/adarshpand3y" target="_blank">Github Profile</a>
+            
+        </p>
     </footer>
 
     <script src="./js/script.js"></script>
-  </body>
+</body>
+
 </html>
