updated style and script layout

--- a/createurl.html
+++ b/createurl.html
@@ -29,7 +29,7 @@
             <input class="focus" type="text" id="lname" name="lastname" placeholder="Your message here...">
 
             <label for="lname">Generated URL</label>
-            <input type="text" id="lname" name="lastname" placeholder="Your URL will be generated here." readonly>
+            <textarea class="textarea-muted" type="text" id="lname" name="lastname" placeholder="Your URL will be generated here." readonly></textarea>
 
             <button type="button">Generate URL</button>
             <button type="button">Copy URL</button>
