Updated nav links

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 
   <body>
     <div class="topnav">
-      <a class="active" href="/index.html">Message</a>
-      <a href="/createurl.html">Create Message</a>
+      <a class="active" href="/Decoding-Text-Animation/">Message</a>
+      <a href="/Decoding-Text-Animation/createurl.html">Create Message</a>
     </div>
     <h1 id="reveal" class="center"></h1>
 
