--- a/createurl.html
+++ b/createurl.html
@@ -15,8 +15,8 @@
 
 <body>
     <div class="topnav">
-        <a href="/index.html">Message</a>
-        <a class="active" href="/createurl.html">Create Message</a>
+        <a href="/Decoding-Text-Animation/">Message</a>
+        <a class="active" href="/Decoding-Text-Animation/createurl.html">Create Message</a>
     </div>
     
     <div class="center form-div card">
