Added limitations to input tags

--- a/createurl.html
+++ b/createurl.html
@@ -23,10 +23,10 @@
         <h3 id="reveal"></h3>
         <form>
             <label for="fname">Enter your name</label>
-            <input class="focus" type="text" id="username" name="username" placeholder="Your name here...">
+            <input class="focus" type="text" id="username" required maxlength="10" name="username" placeholder="Your name here...">
 
             <label for="lname">Enter your message</label>
-            <input class="focus" type="text" id="usermessage" name="usermessage" placeholder="Your message here...">
+            <input class="focus" type="text" id="usermessage" required maxlength="75" name="usermessage" placeholder="Your message here...">
 
             <label for="lname">Generated share message</label>
             <textarea type="text" id="messagebox" name="lastname" placeholder="Your message will be generated here." readonly></textarea>
